Fix spacing.

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -101,7 +101,7 @@
     position: relative;
     grid-row: 2;
     grid-column: 1;
-    left: -50%;
+    left: -25%;
     top: -15%;
     /* padding: 0; */
 }
